Small code refactoring.